Particle system crashes #59258

Closed
opened 2018-12-12 17:54:11 +01:00 by Wybren van Keulen · 11 comments

Since the last few days, there is a problem with particle systems that don't use physics. There are some lines printed to the terminal, and sometimes Blender crashes.

To reproduce this error:

  • Add a plane
  • Add a particle system to the plane.
  • Set Physics Type to either No or Keyed
  • Switch from Emitter to Hair and back.

Now you will see the following lines output to the terminal:

add_relation(Particle Point Cache) - Failed, but op_from (ComponentKey(OBPlane, PARTICLE_SYSTEM)) was ok
add_relation(Particle Point Cache) - Could not find op_to (ComponentKey(OBPlane, POINT_CACHE))

I get the same error when configuring particles through Python in The Grove. There it eventually also causes a crash. The above steps are the simplest way I could find to reproduce the bug, although it doesn't crash Blender.

I'm on OSX at the moment and will try tomorrow on a Windows 10 machine.

Since the last few days, there is a problem with particle systems that don't use physics. There are some lines printed to the terminal, and sometimes Blender crashes. To reproduce this error: - Add a plane - Add a particle system to the plane. - Set *Physics Type* to either *No* or *Keyed* - Switch from *Emitter* to *Hair* and back. Now you will see the following lines output to the terminal: ``` add_relation(Particle Point Cache) - Failed, but op_from (ComponentKey(OBPlane, PARTICLE_SYSTEM)) was ok add_relation(Particle Point Cache) - Could not find op_to (ComponentKey(OBPlane, POINT_CACHE)) ``` I get the same error when configuring particles through Python in The Grove. There it eventually also causes a crash. The above steps are the simplest way I could find to reproduce the bug, although it doesn't crash Blender. I'm on OSX at the moment and will try tomorrow on a Windows 10 machine.

Added subscriber: @WybrenvanKeulen

Added subscriber: @WybrenvanKeulen

It actually got worse. I just made a fresh build on OSX and now particle instanced objects don't show up unless I check "Use modifier stack". This could be a different bug, but I suspect it may be related because I saw that with "make update", a file called "object_relations.c" was updated. And given the terminal message starts with "add_relation", this may be related.

In the meantime I tested on Windows 10 and same thing there.

It actually got worse. I just made a fresh build on OSX and now particle instanced objects don't show up unless I check "Use modifier stack". This could be a different bug, but I suspect it may be related because I saw that with "make update", a file called "object_relations.c" was updated. And given the terminal message starts with "add_relation", this may be related. In the meantime I tested on Windows 10 and same thing there.

A user of The Grove reported that this bug now sometimes causes crashes when opening a Blender file, making the file unusable. I can confirm this, and Blender crashes with a segmentation fault and the following crash.txt, which leads me to believe that it is a bug in the dependency graph.

# Blender 2.80 (sub 38), Commit date: 2018-12-17 16:11, Hash 144178bacf2

# backtrace
0   blender                             0x0000000107924077 BLI_system_backtrace + 55
1   blender                             0x0000000106daa01b sig_handle_crash + 363
2   libsystem_platform.dylib            0x00007fff59b3df5a _sigtramp + 26
3   libobjc.A.dylib                     0x00007fff58c0b087 _ZN12_GLOBAL__N_119AutoreleasePoolPage3popEPv + 817
4   blender                             0x00000001075cc042 BKE_libblock_copy_ex + 194
5   blender                             0x00000001075cb201 BKE_id_copy_ex + 225
6   blender                             0x000000010793eba6 _ZN3DEG34deg_expand_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_10IDDepsNodeEPNS_20DepsgraphNodeBuilderEb + 806
7   blender                             0x000000010793f865 _ZN3DEG34deg_update_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_10IDDepsNodeE + 629
8   blender                             0x000000010793e7dc _ZN3DEGL17deg_task_run_funcEP8TaskPoolPvi + 140
9   blender                             0x0000000107925098 BLI_task_pool_work_and_wait + 664
10  blender                             0x00000001079252de BLI_task_pool_work_wait_and_reset + 14
11  blender                             0x000000010793e4fa _ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE + 442
12  blender                             0x000000010767db4b BKE_scene_graph_update_tagged + 187
13  blender                             0x0000000106dae13c wm_event_do_depsgraph + 236
14  blender                             0x0000000106db710f wm_file_read_post + 111
15  blender                             0x0000000106db69d6 WM_file_read + 854
16  blender                             0x0000000106db92f6 wm_open_mainfile_exec + 422
17  blender                             0x0000000106db1b7a wm_handler_fileselect_do + 218
18  blender                             0x0000000106db5762 wm_handlers_do_intern + 1794
19  blender                             0x0000000106db13df wm_handlers_do + 31
20  blender                             0x0000000106db09c2 wm_event_do_handlers + 1474
21  blender                             0x0000000106daaa90 WM_main + 32
22  blender                             0x0000000106da69d9 main + 969
23  libdyld.dylib  
A user of The Grove reported that this bug now sometimes causes crashes when opening a Blender file, making the file unusable. I can confirm this, and Blender crashes with a segmentation fault and the following crash.txt, which leads me to believe that it is a bug in the dependency graph. ``` # Blender 2.80 (sub 38), Commit date: 2018-12-17 16:11, Hash 144178bacf2 # backtrace 0 blender 0x0000000107924077 BLI_system_backtrace + 55 1 blender 0x0000000106daa01b sig_handle_crash + 363 2 libsystem_platform.dylib 0x00007fff59b3df5a _sigtramp + 26 3 libobjc.A.dylib 0x00007fff58c0b087 _ZN12_GLOBAL__N_119AutoreleasePoolPage3popEPv + 817 4 blender 0x00000001075cc042 BKE_libblock_copy_ex + 194 5 blender 0x00000001075cb201 BKE_id_copy_ex + 225 6 blender 0x000000010793eba6 _ZN3DEG34deg_expand_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_10IDDepsNodeEPNS_20DepsgraphNodeBuilderEb + 806 7 blender 0x000000010793f865 _ZN3DEG34deg_update_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_10IDDepsNodeE + 629 8 blender 0x000000010793e7dc _ZN3DEGL17deg_task_run_funcEP8TaskPoolPvi + 140 9 blender 0x0000000107925098 BLI_task_pool_work_and_wait + 664 10 blender 0x00000001079252de BLI_task_pool_work_wait_and_reset + 14 11 blender 0x000000010793e4fa _ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE + 442 12 blender 0x000000010767db4b BKE_scene_graph_update_tagged + 187 13 blender 0x0000000106dae13c wm_event_do_depsgraph + 236 14 blender 0x0000000106db710f wm_file_read_post + 111 15 blender 0x0000000106db69d6 WM_file_read + 854 16 blender 0x0000000106db92f6 wm_open_mainfile_exec + 422 17 blender 0x0000000106db1b7a wm_handler_fileselect_do + 218 18 blender 0x0000000106db5762 wm_handlers_do_intern + 1794 19 blender 0x0000000106db13df wm_handlers_do + 31 20 blender 0x0000000106db09c2 wm_event_do_handlers + 1474 21 blender 0x0000000106daaa90 WM_main + 32 22 blender 0x0000000106da69d9 main + 969 23 libdyld.dylib ```

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-19 15:01:24 +01:00

Guessing this might be depsgraph related too

Guessing this might be depsgraph related too

The print about relation being unable to be added is harmless. Crash i could not reproduce.

However, i did some fixes in 4563849c1b. So please test with an upcoming version of Blender from buildbot. If that still crashes we do need a simple .blend file with exact steps reproducing the issue.

The print about relation being unable to be added is harmless. Crash i could not reproduce. However, i did some fixes in 4563849c1b. So please test with an upcoming version of Blender from buildbot. If that still crashes we do need a simple .blend file with exact steps reproducing the issue.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

Since last asking for information it has been 7 or more days, due to the policy of our bug tracker we will have to archive the report until the requested information is given.

Since last asking for information it has been 7 or more days, due to the policy of our bug tracker we will have to archive the report until the requested information is given.

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

This no longer happens in the latest builds, so I'm changing the status to resolved. Please excuse my late response and thanks for fixing it!

This no longer happens in the latest builds, so I'm changing the status to resolved. Please excuse my late response and thanks for fixing it!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59258
No description provided.